# kernel-patches-daemon

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
configs/: kpd.json  labels.json
kernel_patches_daemon/: __main__.py  branch_worker.py  config.py  daemon.py  github_connector.py  github_logs.py  github_sync.py  patchwork.py  stats.py  status.py  utils.py
tests/: __init__.py  test_branch_worker.py  test_config.py  test_github_connector.py  test_github_logs.py  test_github_sync.py  test_patchwork.py  test_status.py  test_utils.py
tests/common/: patchwork_mock.py
tests/fixtures/: job_log_no_failures  job_log_one_failure  job_log_two_failures  kpd_config.json  kpd_config_v2.json  kpd_config_v3.json  test_email_body_conflict.golden  test_email_body_failure.golden  test_email_body_success.golden  test_email_submitter_in_allowlist.golden  test_email_submitter_not_in_allowlist.golden  test_email_submitter_not_in_allowlist_and_allowlist_disabled.golden  test_inline_email_text_multiple.golden  test_inline_email_text_none.golden  test_inline_email_text_single.golden
