[tool.poetry]
name = "kernel-patches-daemon"
version = "0.1.0"
description = ""
authors = [
    "Nikolay Yurin <yurinnick@meta.com>",
    "Manu Bretelle <chantra@meta.com>",
    "Daniel Mueller <muellerd@meta.com>",
]
readme = "README.md"
packages = [{include = "kernel_patches_daemon"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
aiohttp = "^3.8"
aiohttp-retry = "^2.8"
# aioresponses for asserts was not released as of 0.7.4
# Tracking it in https://github.com/pnuckowski/aioresponses/issues/244
aioresponses = { git = "https://github.com/pnuckowski/aioresponses.git", rev = "56b843319d5d0ae8a405f188e68d7ba8c7573bc8" }
multidict = "^6.0"
python = "^3.8"
cachetools = "^5.3.0"
gitpython = "^3.1.31"
opentelemetry-api = "^1.18.0"
pygithub = "^1.59.0"
pyre-extensions = "^0.0.30"
opentelemetry-sdk = "^1.18.0"
python-dateutil = "^2.8.2"
# Explicitely include cryptography package
# It's required for PyJWT which is dependency of PyGithub
# https://pyjwt.readthedocs.io/en/stable/installation.html#cryptographic-dependencies-optional
cryptography = "^41.0.3"
certifi = "^2023.7.22"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
munch = "^3.0.0"

# Temporary fix for the case KPD and poetry share the same virtual environment
# urllib3 2.0 and later cause poetry to fail with error:
# > __init__() got an unexpected keyword argument 'strict'
# https://github.com/python-poetry/poetry/issues/7936
[tool.poetry.group.poetry_fix.dependencies]
urllib3 = "^1.26.0"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
flake8 = "^5.0.0"
flake8-import-order = "^0.18.2"
flake8-comprehensions = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
